--- a/InheritancePoliceGun/InheritancePoliceGun.vcxproj.filters
+++ b/InheritancePoliceGun/InheritancePoliceGun.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="NursePolice.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gun.h">
@@ -41,5 +44,9 @@
     <ClInclude Include="NursePolice.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 </Project>
