--- a/Human/Human.vcxproj
+++ b/Human/Human.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{E9180B7E-3432-483A-B851-AC7182AD29CF}</ProjectGuid>
-    <RootNamespace>InheritancePoliceGun</RootNamespace>
+    <ProjectGuid>{e86b7e09-5b58-4d33-975b-8bfab1ce2d73}</ProjectGuid>
+    <RootNamespace>Human</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,20 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ForcePolice.cpp" />
-    <ClCompile Include="Gun.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="NursePolice.cpp" />
-    <ClCompile Include="Police.cpp" />
+    <ClCompile Include="ComputerEngineer.cpp" />
+    <ClCompile Include="Human.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ForcePolice.h" />
-    <ClInclude Include="Gun.h" />
-    <ClInclude Include="NursePolice.h" />
-    <ClInclude Include="Police.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClInclude Include="ComputerEngineer.h" />
+    <ClInclude Include="Human.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
