--- a/Human/Human.vcxproj
+++ b/Human/Human.vcxproj
@@ -140,11 +140,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ComputerEngineer.cpp" />
-    <ClCompile Include="Human.cpp" />
+    <ClCompile Include="Developer.cpp" />
+    <ClCompile Include="Human.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComputerEngineer.h" />
-    <ClInclude Include="Human.h" />
+    <ClInclude Include="Developer.h" />
+    <ClInclude Include="Human.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
