--- a/Human/Human.vcxproj.filters
+++ b/Human/Human.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="ComputerEngineer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Developer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Human.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ComputerEngineer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Developer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
