--- a/_2020_07_06Assignment/_2020_07_06Assignment.vcxproj
+++ b/_2020_07_06Assignment/_2020_07_06Assignment.vcxproj
@@ -18,6 +18,21 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Add.cpp" />
+    <ClCompile Include="Calc.cpp" />
+    <ClCompile Include="Div.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mul.cpp" />
+    <ClCompile Include="Sub.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Add.h" />
+    <ClInclude Include="Calc.h" />
+    <ClInclude Include="Div.h" />
+    <ClInclude Include="Mul.h" />
+    <ClInclude Include="Sub.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -138,9 +153,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Source.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
