--- a/_2020_07_07Lecture/_2020_07_07Lecture.vcxproj.filters
+++ b/_2020_07_07Lecture/_2020_07_07Lecture.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="_01_double_pointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="_02_double_pointer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_03_pointer_array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
