--- a/CORONA/CORONA.vcxproj.filters
+++ b/CORONA/CORONA.vcxproj.filters
@@ -14,4 +14,32 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="China.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Korea.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="America.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Corona.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="China.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Korea.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="America.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
